--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,10 @@ jobs:
     analyze:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
+            -
+                uses: actions/checkout@v2
+                with:
+                    submodules: recursive
             - run: composer install
             - run: composer require php-http/multipart-stream-builder
             - run: pipelines/analyze/phpstan
@@ -19,7 +22,10 @@ jobs:
     lint:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
+            -
+                uses: actions/checkout@v2
+                with:
+                    submodules: recursive
             - run: composer install
             - run: composer require php-http/multipart-stream-builder
             - run: pipelines/lint/code-sniffer
@@ -29,7 +35,10 @@ jobs:
     test:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
+            -
+                uses: actions/checkout@v2
+                with:
+                    submodules: recursive
             - run: composer install
             - run: composer require php-http/multipart-stream-builder
             - run: pipelines/test/phpunit
