Add `docker` submodule

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,41 +4,61 @@ on:
     - release
 
 jobs:
-
     analyze:
         runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                php:
+                    - "7.4"
+                    - "8.0"
+        env:
+            PHP_VERSION: ${{ matrix.php }}
         steps:
             -
                 uses: actions/checkout@v2
                 with:
                     submodules: recursive
-            - run: composer install
-            - run: composer require php-http/multipart-stream-builder
-            - run: pipelines/analyze/phpstan
-            - run: pipelines/analyze/psalm
+            - run: docker run --volume=${PWD}:/app composer install
+            - run: docker run --volume=${PWD}:/app composer require php-http/multipart-stream-builder
+            - run: docker-compose --file=docker/docker-compose.yml run application pipelines/analyze/phpstan
+            - run: docker-compose --file=docker/docker-compose.yml run application pipelines/analyze/psalm
             # Fails due to some autoloading issue.
-            # - run: pipelines/analyze/phan
+            # - run: docker-compose --file=docker/docker-compose.yml run application pipelines/analyze/phan
 
     lint:
         runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                php:
+                    - "7.4"
+                    - "8.0"
+        env:
+            PHP_VERSION: ${{ matrix.php }}
         steps:
             -
                 uses: actions/checkout@v2
                 with:
                     submodules: recursive
-            - run: composer install
-            - run: composer require php-http/multipart-stream-builder
-            - run: pipelines/lint/code-sniffer
-            - run: pipelines/lint/code-style-fixer
-            - run: pipelines/lint/copy-paste-detector
+            - run: docker run --volume=${PWD}:/app composer install
+            - run: docker run --volume=${PWD}:/app composer require php-http/multipart-stream-builder
+            - run: docker-compose --file=docker/docker-compose.yml run application pipelines/lint/code-sniffer
+            - run: docker-compose --file=docker/docker-compose.yml run application pipelines/lint/code-style-fixer
+            - run: docker-compose --file=docker/docker-compose.yml run application pipelines/lint/copy-paste-detector
 
     test:
         runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                php:
+                    - "7.4"
+                    - "8.0"
+        env:
+            PHP_VERSION: ${{ matrix.php }}
         steps:
             -
                 uses: actions/checkout@v2
                 with:
                     submodules: recursive
-            - run: composer install
-            - run: composer require php-http/multipart-stream-builder
-            - run: pipelines/test/phpunit
+            - run: docker run --volume=${PWD}:/app composer install
+            - run: docker run --volume=${PWD}:/app composer require php-http/multipart-stream-builder
+            - run: docker-compose --file=docker/docker-compose.yml run application pipelines/test/phpunit
