--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "license": "GPL-3.0-only",
     "minimum-stability": "stable",
     "require": {
+        "php": "^7.4|^8.0",
         "ocr/core": "^1.0",
         "psr/http-client": "^1.0",
         "psr/http-factory": "^1.0",
